--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-	"C_Cpp.clang_format_fallbackStyle": "{BasedOnStyle: Google, IndentWidth: 4, ColumnLimit: 0}"
+	"C_Cpp.clang_format_fallbackStyle": "{BasedOnStyle: Google, IndentWidth: 4, ColumnLimit: 0}",
+	"files.associations": {
+		"ostream": "cpp"
+	}
 }
