done refactor CirMgr, fixed cirg -fanin

--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
 	"C_Cpp.clang_format_fallbackStyle": "{BasedOnStyle: Google, IndentWidth: 4, ColumnLimit: 0}",
 	"files.associations": {
-		"ostream": "cpp"
+		"ostream": "cpp",
+		"*.tcc": "cpp"
 	}
 }
